[gd_scene load_steps=8 format=3 uid="uid://csqi6qx2y1ohe"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_mjeol"]
[ext_resource type="Script" uid="uid://bpmk8y7ewnnjr" path="res://addons/CustomControls/Dialogs/select_skill_required_equipment.gd" id="1_vwaj4"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="2_uy463"]
[ext_resource type="Script" uid="uid://d0kowhkcjb7kv" path="res://addons/CustomControls/custom_option_button.gd" id="3_okjhn"]

[sub_resource type="Gradient" id="Gradient_4u2ec"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q1go7"]
gradient = SubResource("Gradient_4u2ec")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxggo"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="SelectSkillRequiredEquipment" type="Window"]
title = "Skill Required Equipment"
position = Vector2i(0, 36)
size = Vector2i(400, 196)
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_mjeol")
script = ExtResource("1_vwaj4")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_q1go7")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wxggo")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Select Equipment:"

[node name="EquipmentList" type="OptionButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Select the type of equipment (weapons or equipment parts)"
mouse_default_cursor_shape = 2
item_count = 2
selected = 0
popup/item_0/text = "Weapons"
popup/item_0/id = 0
popup/item_1/text = "Armors"
popup/item_1/id = 1
script = ExtResource("3_okjhn")

[node name="ItemList" type="OptionButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Select the desired equipment from the dropdown list."
mouse_default_cursor_shape = 2
item_count = 1
selected = 0
popup/item_0/text = "Items"
popup/item_0/id = 0
script = ExtResource("3_okjhn")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_uy463")]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"
text_overrun_behavior = 3

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_uy463")]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "Cancel"
text_overrun_behavior = 3

[connection signal="item_selected" from="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/EquipmentList" to="." method="_on_equipment_list_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
